# seasons

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  index.html  styles.css
docs/: audio-sync-implementation-live.md
scripts/: run-on-i3.sh  trunk-dev.sh
src/: app.rs  desktop.rs  main.rs  storage.rs  theme.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  theme.rs
src-tauri/src/audio/: analysis.rs  capture.rs  mod.rs  sync.rs
src-tauri/src/hue/: client.rs  config.rs  entertainment.rs  error.rs  mod.rs  models.rs
src-tauri/src/ollama/: engine.rs  mod.rs  models.rs
src/hue/: api.rs  mod.rs  models.rs  presets.rs
src/ollama/: api.rs  mod.rs  models.rs
src/ui/: about_panel.rs  audio_sync_panel.rs  automation_panel.rs  bridge_panel.rs  command_panel.rs  device_cards.rs  device_panel.rs  light_grid.rs  mod.rs  ollama_panel.rs  scene_composer.rs  status_banner.rs  theme_panel.rs
